# evan

./: CMakeLists.txt  Doxyfile  README.md
.github/ISSUE_TEMPLATE/: build.md  refactor.md
.github/workflows/: build.yml  documentations.yml
cmake/: CommonFunctions.cmake  ConfigLinux.cmake  ConfigMacOS.cmake  ConfigWindows.cmake
docs/: API.md  CMakeLists.txt  CODE_CONVENTIONS.md
examples/: CMakeLists.txt
examples/GLFW-hello-world/: CMakeLists.txt  Hello-World
examples/GLFW-hello-world/sources/: main.cpp
examples/hello-world/: CMakeLists.txt
examples/hello-world/sources/: main.cpp
headers/: AAssetManager.hpp  ADeviceBackend.hpp  AGraphicalContext.hpp  ALogger.hpp  ARenderingContext.hpp  ASoftware.hpp  ASwapchain.hpp  ASwapchainContext.hpp  ASwapchainImage.hpp  App.hpp  DeviceContext.hpp  Engine.hpp  Error.hpp  Evan.hpp  EvanPlatform.hpp  FileAsset.hpp  Frame.hpp  GPUMesh.hpp  IDeviceBackend.hpp  IPlatform.hpp  Material.hpp  Mesh.hpp  Model.hpp  Primitive.hpp  Render.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Software.hpp  SwapchainContext.hpp  Utils.hpp  Version.hpp  Vertex.hpp  maverik.hpp
headers/glfw/: AssetsManager.hpp  DesktopBackend.hpp  DesktopPlatform.hpp  DesktopSwapchainContext.hpp  DesktopSwapchainImage.hpp  GraphicalContext.hpp  IDesktopPlatform.hpp  Logger.hpp  RenderingContext.hpp  Software.hpp  SwapchainContext.hpp
headers/glfw/platform/: LinuxDesktopPlatform.hpp  MacOsDesktopPlatform.hpp  WindowsPlatform.hpp
headers/openxr/: AndroidPlatform.hpp  GraphicalContext.hpp  IXrPlatform.hpp  InteractionProfile.hpp  Logger.hpp  Openxr-include.hpp  RenderingContext.hpp  Software.hpp  SwapchainContext.hpp  XrContext.hpp  XrDeviceBackend.hpp  XrManageActions.hpp  XrPlatform.hpp  XrSwapchainContext.hpp  XrSwapchainImage.hpp
headers/openxr/actions/: AXrAction.hpp  IXrAction.hpp  XrHandActions.hpp  XrHandsActions.hpp  XrHandsMotionActions.hpp  XrManageButtonsActions.hpp  XrManageThumbStickActions.hpp
headers/openxr/platform/: AndroidXrPlatform.hpp  LinuxXrPlatform.hpp
headers/primitive/: Cube.hpp
headers/vk/: AssetsManager.hpp  GraphicalContext.hpp  Logger.hpp  RenderingContext.hpp  Software.hpp  SwapchainContext.hpp
headers/xr/: AndroidPlatform.hpp  GraphicalContext.hpp  Openxr-include.hpp  RenderingContext.hpp  Software.hpp  SwapchainContext.hpp
scripts/: install_ubuntu_dependencies.sh  install_vulkan_linux.sh  install_vulkan_macos.sh  install_vulkan_windows.ps1
sources/: ADeviceBackend.cpp  ASoftware.cpp  ASwapchainContext.cpp  ASwapchainImage.cpp  App.cpp  DeviceContext.cpp  Engine.cpp  Frame.cpp  GPUMesh.cpp  IDeviceBackend.cpp  Material.cpp  Mesh.cpp  Render.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Software.cpp  SwapchainContext.cpp  Version.cpp  evan.cpp
sources/common/: AAssetManager.cpp  ALogger.cpp  ARenderingContext.cpp  ASwapchainContext.cpp  Error.cpp  FileAsset.cpp  Shader.cpp  Utils.cpp
sources/glfw/: AssetsManager.cpp  DesktopBackend.cpp  DesktopPlatform.cpp  DesktopSwapchainContext.cpp  DesktopSwapchainImage.cpp  GraphicalContext.cpp  Logger.cpp  RenderingContext.cpp  Software.cpp  SwapchainContext.cpp
sources/glfw/platform/: LinuxDesktopPlatform.cpp  MacOsDesktopPlatform.cpp  WindowsPlatoform.cpp
sources/openxr/: AndroidPlatform.cpp  GraphicalContext.cpp  IXrPlatform.cpp  InteractionProfile.cpp  Logger.cpp  RenderingContext.cpp  Software.cpp  SwapchainContext.cpp  XrContext.cpp  XrDeviceBackend.cpp  XrManageActions.cpp  XrPlatform.cpp  XrSwapchainContext.cpp  XrSwapchainImage.cpp
sources/openxr/actions/: IXrAction.cpp  XrHandActions.cpp  XrHandsActions.cpp  XrHandsMotionActions.cpp  XrManageButtonsActions.cpp
sources/openxr/platform/: AndroidXrPlaftform.cpp  LinuxXrPlatform.cpp
sources/vk/: AssetsManager.cpp  GraphicalContext.cpp  Logger.cpp  RenderingContext.cpp  Software.cpp  SwapchainContext.cpp
sources/xr/: AndroidPlatform.cpp  GraphicalContext.cpp  RenderingContext.cpp  Software.cpp  SwapchainContext.cpp
tests/: CMakeLists.txt
tests/headers/: test_Version.hpp
tests/headers/glfw/: test_AssetsManager.hpp
tests/headers/vk/: test_AssetsManager.hpp
tests/sources/: test_Version.cpp  test_evan.cpp
tests/sources/glfw/: test_AssetsManager.cpp
tests/sources/vk/: test_AssetsManager.cpp
